<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/legothemes_fragment"
        android:title="@string/legothemes_title"/>
    <item
        android:id="@+id/legosets_fragment"
        android:title="@string/legosets_title"/>

</menu>